spacing issues

--- a/graphic.css
+++ b/graphic.css
@@ -20,6 +20,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    margin: 15px;
   }
   .cell {
     width: 50%;
